// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordField default enum multiplicity == one: default 1`] = `
RecordField {
  Symbol(internal): Object {
    "kind": "input",
    "multiplicity": "one",
    "name": "A",
    "type": Object {
      "multiplicity": "one",
      "name": "ENUM1",
      "type": "enum",
    },
  },
  Symbol(metadata): Object {
    "required": false,
  },
}
`;

exports[`RecordField default enum multiplicity == one: toObject 1`] = `
Object {
  "description": undefined,
  "metadata": Object {
    "required": false,
  },
  "multiplicity": "one",
  "name": "A",
  "title": undefined,
  "type": Object {
    "multiplicity": "one",
    "name": "ENUM1",
    "type": "enum",
  },
}
`;

exports[`RecordField default enum: default 1`] = `
RecordField {
  Symbol(internal): Object {
    "kind": "input",
    "multiplicity": "many",
    "name": "A",
    "type": Object {
      "multiplicity": "many",
      "name": "ENUM1",
      "type": "enum",
    },
  },
  Symbol(metadata): Object {
    "required": false,
  },
}
`;

exports[`RecordField default enum: toObject 1`] = `
Object {
  "description": undefined,
  "metadata": Object {
    "required": false,
  },
  "multiplicity": "many",
  "name": "A",
  "title": undefined,
  "type": Object {
    "multiplicity": "many",
    "name": "ENUM1",
    "type": "enum",
  },
}
`;

exports[`RecordField default: default 1`] = `
RecordField {
  Symbol(internal): Object {
    "kind": "input",
    "multiplicity": "one",
    "name": "A",
    "type": "string",
  },
  Symbol(metadata): Object {
    "required": false,
  },
}
`;

exports[`RecordField default: toObject 1`] = `
Object {
  "description": undefined,
  "metadata": Object {
    "required": false,
  },
  "multiplicity": "one",
  "name": "A",
  "title": undefined,
  "type": "string",
}
`;

exports[`RecordField required is setup: required 1`] = `
Object {
  "description": undefined,
  "metadata": Object {
    "required": true,
  },
  "multiplicity": "one",
  "name": "A",
  "title": undefined,
  "type": "string",
}
`;
